tests/baselines/reference/moduleResolutionWithSuffixes_one_jsModule.errors.txt
/tsconfig.json(6,23): error TS5107: Option 'moduleResolution=node10' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
  Visit https://aka.ms/ts6 for migration information.


==== /tsconfig.json (1 errors) ====
    {
    	"compilerOptions": {
    		"allowJs": true,
    		"checkJs": false,
    		"outDir": "bin",
    		"moduleResolution": "node",
    		                    ~~~~~~
!!! error TS5107: Option 'moduleResolution=node10' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
!!! error TS5107:   Visit https://aka.ms/ts6 for migration information.
    		"traceResolution": true,
    		"moduleSuffixes": [".ios"]
    	}
    }
    
==== /index.ts (0 errors) ====
    import { ios } from "./foo.js";
==== /foo.ios.js (0 errors) ====
    "use strict";
    exports.__esModule = true;
    function ios() {}
    exports.ios = ios;
==== /foo.js (0 errors) ====
    "use strict";
    exports.__esModule = true;
    function base() {}
    exports.base = base;
    